[tool.poetry]
name = "ames-housing"
version = "0.1.0"
description = "Example of using mlflow with hyperparameter tuning for the Ames Housing dataset"
authors = ["Ram Vishnampet <rvishnampet@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
scikit-learn = "*"
sklearn-pandas = "*"
mlflow = "*"
seaborn = "*"
hyperopt = "*"
hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn"}
ngboost = "^0.3.10"

[tool.poetry.dev-dependencies]
black = "*"
pylint = "*"
pytest = "*"
isort = "*"
mypy = "*"
ipython = "^7.23.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
